--- a/run_tests.ipynb
+++ b/run_tests.ipynb
@@ -14,7 +14,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install cvxpy\n"
+    "!pip install cvxpy\n",
     "import os\n",
     "import subprocess\n",
     "from pathlib import Path\n",
